[gd_scene load_steps=35 format=3 uid="uid://cs0kay877rrbv"]

[ext_resource type="Script" path="res://frog.gd" id="1_i50yc"]
[ext_resource type="Texture2D" uid="uid://dpwne58plfjq0" path="res://Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="1_rq300"]
[ext_resource type="Texture2D" uid="uid://cuupsuvehbey7" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="2_172nw"]
[ext_resource type="Texture2D" uid="uid://d3nmayu6axbrh" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="3_r8l5i"]
[ext_resource type="AudioStream" uid="uid://gagnlvnycj3p" path="res://Sunny-land-files/Custom/frog_hurt.wav" id="5_u3llr"]
[ext_resource type="AudioStream" uid="uid://ccvsdaeu884j5" path="res://Sunny-land-files/10_Battle_SFX/08_Bite_04.wav" id="6_nbeqg"]
[ext_resource type="Script" path="res://MoveToPointState.gd" id="7_357w0"]
[ext_resource type="Script" path="res://CharacterStates/CharacterStateMachine.gd" id="7_ypbje"]
[ext_resource type="Script" path="res://CharacterStates/DeathState.gd" id="8_aikl1"]
[ext_resource type="Script" path="res://MobsStateDebugLabel.gd" id="8_cmfbh"]
[ext_resource type="Script" path="res://CharacterStates/MobMoveState.gd" id="9_03bk7"]
[ext_resource type="Script" path="res://ScaredState.gd" id="9_thrqy"]
[ext_resource type="Script" path="res://CharacterStates/MobAttackState.gd" id="10_jrs1a"]
[ext_resource type="Script" path="res://CharacterStates/MobSpawnState.gd" id="10_x62h4"]
[ext_resource type="Script" path="res://TextureProgressBar.gd" id="11_ql0vd"]
[ext_resource type="Script" path="res://ProgressBar.gd" id="11_sfp5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kj2hp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pfwwa"]
radius = 104.043

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hhpf5"]
radius = 5.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11pcb"]
size = Vector2(27, 27)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78nex"]
bg_color = Color(0, 0, 0, 0.164706)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyuif"]
bg_color = Color(0.811765, 0.168627, 0.243137, 1)

[sub_resource type="Gradient" id="Gradient_yo0xm"]
offsets = PackedFloat32Array(0, 0.300699)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p6hmv"]
gradient = SubResource("Gradient_yo0xm")

[sub_resource type="Animation" id="Animation_nhc71"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fejpj"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rq300")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6i8g2"]
resource_name = "Fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ke051"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_172nw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_74ve2"]
resource_name = "Jump"
length = 0.5
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yohue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qrgsx"]
resource_name = "Run"
length = 0.55
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ce3ua"]
resource_name = "Scared"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r8l5i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ld68c"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_172nw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.494118), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i3i48"]
_data = {
"Attack": SubResource("Animation_nhc71"),
"Death": SubResource("Animation_fejpj"),
"Fall": SubResource("Animation_6i8g2"),
"Idle": SubResource("Animation_ke051"),
"Jump": SubResource("Animation_74ve2"),
"RESET": SubResource("Animation_yohue"),
"Run": SubResource("Animation_qrgsx"),
"Scared": SubResource("Animation_ce3ua"),
"Spawn": SubResource("Animation_ld68c")
}

[node name="Frog" type="CharacterBody2D" node_paths=PackedStringArray("death_sound", "attack_sound", "collision_shape", "anim", "sprite_2d", "character_state_machine")]
collision_layer = 2
collision_mask = 8
floor_snap_length = 11.0
script = ExtResource("1_i50yc")
death_sound = NodePath("SFX/frog_death")
attack_sound = NodePath("SFX/frog_attack")
collision_shape = NodePath("FrogCollisionShape")
health = 10
drop_amount = 2
drop_range = 1
attack_damage = 1
speed = 100
jump_velocity = -400
id = "Frog"
anim = NodePath("AnimationPlayer")
sprite_2d = NodePath("Sprite2D")
character_state_machine = NodePath("CharacterStateMachine")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
hframes = 3

[node name="FrogCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kj2hp")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 2
monitoring = false

[node name="PlayerDetection" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_pfwwa")

[node name="PlayerCollision" type="Area2D" parent="."]
collision_layer = 2
monitoring = false

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-1, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hhpf5")

[node name="FrogHurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 26

[node name="Hurtbox" type="CollisionShape2D" parent="FrogHurtbox"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_11pcb")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character", "animation_player")]
script = ExtResource("7_ypbje")
current_state = NodePath("Spawn")
character = NodePath("..")
animation_player = NodePath("../AnimationPlayer")

[node name="Idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_03bk7")
move_animation = "Move"
can_move = false

[node name="Death" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_aikl1")
death_animation = "Death"
can_move = false
has_gravity = false
can_attack = false

[node name="Attack" type="Node" parent="CharacterStateMachine"]
script = ExtResource("10_jrs1a")
can_move = false
can_attack = false

[node name="MoveToPoint" type="Node" parent="CharacterStateMachine"]
script = ExtResource("7_357w0")

[node name="Spawn" type="Node" parent="CharacterStateMachine"]
script = ExtResource("10_x62h4")
spawn_animation = "Spawn"
can_move = false
can_attack = false

[node name="Scared" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_thrqy")
scared_animation = "Scared"
can_attack = false

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("character")]
visible = false
offset_left = -41.0
offset_top = -3.0
offset_right = 41.0
offset_bottom = 17.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 9
text = "text"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
script = ExtResource("8_cmfbh")
character = NodePath("..")

[node name="ProgressBar" type="ProgressBar" parent="." node_paths=PackedStringArray("character")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -15.0
offset_right = 118.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.25, 0.25)
theme_override_styles/background = SubResource("StyleBoxFlat_78nex")
theme_override_styles/fill = SubResource("StyleBoxFlat_gyuif")
value = 50.0
show_percentage = false
script = ExtResource("11_sfp5r")
character = NodePath("..")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -12.0
offset_right = 243.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 1)
texture_progress = SubResource("GradientTexture1D_p6hmv")
tint_progress = Color(0.784314, 0.207843, 0.137255, 1)
script = ExtResource("11_ql0vd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i3i48")
}

[node name="SFX" type="Node2D" parent="."]

[node name="frog_death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_u3llr")

[node name="frog_attack" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_nbeqg")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_player_collision_body_exited"]
[connection signal="body_entered" from="FrogHurtbox" to="." method="_on_frog_hurtbox_body_entered"]
